
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 AUG 31b
  * in model/chem/_H2_Cs_Air_Plasma_22s/chem.c
    - fixed a bug: the ionization reactions shouldn't set W to zero but add to it
  * in bin
    - added bluntwedge.wrp
    

2020 AUG 31a
  * in cycle/restime/_CDF+/restime.c
    - in write_disc_restime_template() made xi[] loop function of numdim and numspec
  * in model/fluid/_Navier-Stokes/fluid_init.c
    - added missing #include <model/share/fluid_share.h>
  * in model/fluid/*/fluid_bdry.c
    - in write_bdry_fluid_template() added Twall param to BDRY_WALLTFIXED1
    - in update_bdry_wall(), now calls _bdry_param(np,gl,lA,0,TYPELEVEL_FLUID_WORK) to find
      T at the wall node for BDRY_WALLTFIXED1
      

2020 AUG 30a
  * in src/bdry.c
    - in _bdry_param(), changed error message wording
    - in read_bdry_actions(), added code to handle bdry extra parameters to be read within actions
      All(), Region()
    - in read_bdry_actions(), added new Plane() action to specify boundary conditions on a plane;
      Plane is now the approach to specify conditions on the faces instead of the cumbersome Faces() 
      which can not be used  in conjunction with boundary extra parameters
  * in model/fluid/*/fluid_bdry.c and model/fluid/_drift-diffusion/fluid.c
    - in write_bdry_fluid_template(), removed Param() within template
    - in write_bdry_fluid_template(), removed Faces() within template
    - in write_bdry_fluid_template(), added Plane() within template
  * in model/fluid/_Navier-Stokes_perfect/fluid_init.c
    - removed unneeded flux variable  within init_node_*()
  * in model/share/fluid_share.c
    - in find_init_mass_fraction_templates(), find_init_molar_fraction_templates(),   