@@ -7,5 +7,5 @@ option   Trapezoidal
 option   Trapezoidal+
 option   BDF
 option   CDF+
-help     Choose "Steady-State" for flowfields with no dependence on time, "RK4" for the standard 4th order accurate Runge-Kutta predictor-corrector, "TVDRK" for the monotone Total Variation Diminishing Runge-Kutta predictor-corrector stencils, "Trapezoidal" for the second-order implicit Runge-Kutta (dual time stepping), "BDF" for the second- and third-order backward difference formula (dual time stepping), "CDF+" for the monotone positivity-preserving cross-difference-formula (dual time stepping).
+help     Choose "Steady-State" for flowfields with no dependence on time, "RK4" for the standard 4th order accurate Runge-Kutta predictor-corrector, "TVDRK" for the monotone Total Variation Diminishing Runge-Kutta predictor-corrector stencils, "Trapezoidal" for the second-order implicit Runge-Kutta (dual time stepping), "Trapezoidal+" for the positivity-preserving variant of the trapezoidal scheme, "BDF" for the second- and third-order backward difference formula (dual time stepping), "CDF+" for the monotone positivity-preserving cross-difference-formula (dual time stepping).
 END
