@@ -12,6 +12,7 @@ option   He_Air_3s_0r
 option   H2_Air_3s_0r
 option   H2_Air_9s
 option   H2_Air_13s
+optionP  H2_Air_Plasma_13s
 optionP  H2_Cs_Air_Plasma_22s
 optionP   H2_Air_Plasma_14s_47r_Jachimowsky-Macheret
 optionP   H2_Air_Plasma_18s_78r_Jachimowsky-Dunn-Kang-Macheret
