@@ -22,6 +22,7 @@ cleanall:
 	( cd _N2_Plasma_3s_3r ; make cleanall )
 	( cd _H2_Air_9s ; make cleanall )
 	( cd _H2_Air_13s ; make cleanall )
+	( cd _H2_Air_Plasma_13s ; make cleanall )
 	( cd _H2_Cs_Air_Plasma_22s ; make cleanall )
 	( cd _H2_Air_Plasma_14s_47r_Jachimowsky-Macheret ; make cleanall )
 	( cd _H2_Air_Plasma_18s_78r_Jachimowsky-Dunn-Kang-Macheret ; make cleanall )
