@@ -1,0 +1,9 @@
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(){
+  printf("\nThis module is not included in this distribution.\n"
+           "Please contact the CFDWARP maintainer for details\n"
+           "on how to obtain this module.\n\n");
+  exit(EXIT_SUCCESS);
+}
