@@ -7,6 +7,14 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2020 SEP 02a
+  * in model/chem
+    - added _H2_Air_Plasma_13s
+  * in model/fluid/*/fluid_post.c
+    - in find_post_variable_name_fluid() and find_post_variable_value_fluid(), changed the
+      mass fractions and number densities to molar fractions
+      
+
 2020 AUG 31b
   * in model/chem/_H2_Cs_Air_Plasma_22s/chem.c
     - fixed a bug: the ionization reactions shouldn't set W to zero but add to it
